--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Javascript Playground</title>
 </head>
 <body> 
     <div id="div-title">
-        <h1 id="title">Title</h1>
+        <h1 id="title">Title</h1> 
+        <!-- query and change title -->
     </div>
+
+    <div id="div-names">
+        <h2>Iterate Names</h2>
+        <!-- create ul -->
+        <!-- create li -->
+    </div> 
+
+    <div id="div-form">
+        <!-- create h2 title -->
+        <!-- create form --> 
+        <!-- add events -->
+
+    </div><br>
+
+    <div id="div-btn">
+          <!-- create button -->
+          <!-- add events --> 
+          <!-- console.log(click) -->
+    </div> 
+
+    <script src="js/main.js"></script> 
+    <script src="js/names.js"></script>
+    <script src="js/form.js"></script> 
+    <script src="js/button.js"></script>
+    
     
 </body>
 </html>
