--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
     </div><br>
 
     <div id="div-btn">
+        <h2 id="bubble">Event Bubbling</h2>
           <!-- create button -->
           <!-- add events --> 
-          <!-- console.log(click) -->
+          <!-- console.log(click) --> 
+          <div id="parent"><br>
+            <button id="alert">ALERT ME!</button>
+            <button id="console">CHECK CONSOLE!</button>
+            <button id="error">ERROR</button>
+        </div>
     </div> 
 
     <script src="js/main.js"></script> 
