coded countDown with 1 second interval using setInterval

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Playground</title>
 </head>
-<body> 
+<body>  
+    <header> 
+        <h1> Set attribute to presentation</h1>
+    </header>
     <div id="div-title">
         <h1 id="title">Title</h1> 
         <!-- query and change title -->
@@ -43,7 +46,9 @@
             <p>Qoutes here!</p>
             <button id="fetch-btn">Click To Fetch Data!</button>
         </div>
-    </div> 
+    </div>  
+
+    <div id="div-move"> Move Me </div>
 
 
     <script src="js/main.js"></script> 
